css/theme.css
---
title: CSS stylesheet
---

@font-face {
  font-family: 'Sanskrit2003';
  src:  url('{{site.baseurl}}/css/Sanskrit2003.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
  unicode-range: U+900-97F, U+A8E0-A8FF, U+1CD0-1CFF ;
}

body {
    font-size: 1.5em;
    line-height: 170%;
    text-rendering: optimizeLegibility; /* ios Hint to use webfonts */
}

a:hover {
  font-weight: 500;
  font-color: #000080;
  text-decoration:none;
}

.nav a:hover {
  font-weight: normal;
}

.navbar-brand a {
  font-weight: 400;
}

.copyright {
    color: #ffffff;
}

.footer {
    text-align: center;
}

.footer a {
    color: #ee4444;
}

.sidebar h1 {
    color: #ee4444;
    /*padding-top: 0em;*/
    font-size: 1.3em;
}

.sidebar {
  padding-left: 2em;
  /*padding-top: 0;*/
}

.sidebar a {
    color: #428bca;
}

.sidebar li {
    margin-top: .7em;
    line-height: 1em;
}

.sidebar a:hover {
    color: #3071a9;
}

.container-left {
    margin: 0;
}

h1 {
    color: #ee4444;
    font-size: 1.4em;
}

h2 {
    color: #C96B8A;
    font-size: 1.2em;
}

h3 {
    color: #A9A9F5;
    font-size: 1em;
}

h4 {
    font-size: 1em;
}

.author {
    color: #ee4444;
}

.author a {
    color: #ee4444;
}

.source {
    color: #ee4444;
}

.sidebar-link {
    list-style-position: inside;
    padding-left:0;
}

/*
    .tag based on http://codepen.io/wbeeftink/pen/dIaDH
*/

.tag-empty {
  border-radius: 3px 0 0 3px;
  display: inline-block;
  height: 20px;
  line-height: 20px;
  position: relative;
  margin: 0 10px 10px 0;
  text-decoration: none;
}

.tag a {
  text-decoration: none;
  font-weight: normal;
}

.tag {
  background: #f9ecf2;
  border-radius: 3px 0 0 3px;
  color: #999;
  display: inline-block;
  height: 20px;
  line-height: 20px;
  padding: 0 20px 0 23px;
  position: relative;
  margin: 0 10px 10px 0;
  text-decoration: none;
  -webkit-transition: color 0.2s;
}

.tag::before {
  background: #f5f5f5;
  border-radius: 10px;
  box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
  content: '';
  height: 6px;
  left: 10px;
  position: absolute;
  width: 6px;
  top: 7px;
}

.tag::after {
  background: #f5f5f5;  /* well.background */
  border-bottom: 10px solid transparent;
  border-left: 10px solid #f9ecf2;
  border-top: 10px solid transparent;
  content: '';
  position: absolute;
  right: 0;
  top: 0;
}

.tag:hover {
  background-color: pink;
  color: white;
}

.tag:hover::after {
   border-left-color: pink;
}


/*.article>.well>h1::before {
    content: "ॐ ";
    font-family: Kokila, "Kohinoor Devanagari", "Sanskrit 2003", "Arial Unicode MS";
    font-size: 1.3em;
}

.article>.well>h2::before {
    content: "ॐ ";
    font-family: Kokila, "Kohinoor Devanagari", "Sanskrit 2003", "Arial Unicode MS";
    font-size: 1.3em;
}*/


/* blockquotes show an open-quote before, with no matching close-quote
markdown results in <p> tags all over the place which make the
close-quote tricky. layout only tested in sanskrit-post */

blockquote {
  border: 0;
  margin-left: 1em;
  font-size: 1.0em;
}

blockquote>p:before {
  color: #ccc;
  content: open-quote;
  font-family: Georgia, serif;
  font-size: 3em;
  line-height: 0em;
  margin-left: -0.5em;
  margin-right: 0.08em;
  vertical-align: -0.4em;
  text-indent: 5em;
}

blockquote:after {
  content: no-close-quote;
}

cite {
    font-size:.8em;
}

.toc-sidebar {
    height: 100%;
    position: fixed;
    padding-top: 20px;
}

#toc {
    list-style-position: inside;
    padding-left:0;
    font-size:0.9em;
    line-height: 120%;
}

#toc ul {
    padding-left: 1em;
    list-style-position: outside;
}

#toc li {
  margin: 0.2em;
}

#toc a {
    text-decoration: none;
    display: block;
}

#toc .toc-h2 {
    padding-left: 0px;
}

#toc .toc-h3 {
    padding-left: 5px;
}

#disqus_thread {
  padding-top:20px
}

.sanskrit {
    font-family: "Sanskrit2003";
    font-size: 120%;
    line-height: 185%;
    /*font-size: 1.4em;
    line-height: 160%;
    font-weight: 100;*/
}

.nospaceafter {
  margin-bottom:1pt;
}

.sidebar ul {
    padding-left: 1em;
    list-style-position: outside;
    list-style-type: circle;
}

.sidebar li {
  margin: 0.2em;
  padding: 0.1em;
}

.sidebar {
  padding-top: 0.3em;
  padding-bottom: 1em;
}

.sidebar img {
  padding-top: 1em;
  padding-bottom: 0.5em;
  padding-left: 0em;
  padding-right: 1em;
}

.submenu {
  list-style-type: none;
}

table.borderless td,table.borderless th{
  border: none !important;
}

/*Bootstrap has a 20px padding after tables
which looks odd at the bottom of a well*/
.well>table:last-child {
  margin-bottom: 0px;
}

